yaml/deployment.yml
#SERVICE
apiVersion: v1
kind: Service
metadata:
  name: webpage
  labels:
    app: webpage
    service: webpage
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: webpage
---
#DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpage-v1
  labels:
    app: webpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpage
      version: v1
  template:
    metadata:
      labels:
        app: webpage
        version: v1
    spec:
      serviceAccountName: info-webpage
      containers:
      - name: webpage
        image: gcr.io/nib-backend-nonprod/python:2.0.0
        imagePullPolicy: IfNotPresent
        args: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---

#NETWORKING

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: webpage-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webpage
spec:
  hosts:
  - "*"
  gateways:
  - webpage-gateway
  http:
  - match:
    - uri:
        exact: /hello
    route:
    - destination:
        host: webpage
        port:
          number: 8000
